feat(index): update JVector index implementation and SQL integration